--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Misfits Basketball</title>
     <meta name="description"
-        content="Misfits basketball club is a youth sports basketball club located in Regina Saskaskatchewan">
+        content="Misfits Basketball - A Community of Hoopers in Regina, SK Join Misfits Basketball, a friendly and diverse group of basketball enthusiasts in Regina, Saskatchewan. Whether you are a beginner or a pro, you will find a game that suits your skill level and schedule. Learn more about our events, members, and sponsors on our website.">
     <meta name="keywords" content="Regina, youth, basketball, club">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,8 @@
     <meta property="og:title" content="Misfits Basketball Club Regina Saskatchewan" />
     <meta property="og:image" content="assets/images/misfit m.jpg" />
     <meta property="og:site_name" content="Misfits Basketball Club" />
-    <meta property="og:description" content="Misfits Basketball Club Regina " />
+    <meta property="og:description"
+        content="Misfits Basketball - A Community of Hoopers in Regina, SK Join Misfits Basketball, a friendly and diverse group of basketball enthusiasts in Regina, Saskatchewan. Whether you are a beginner or a pro, you will find a game that suits your skill level and schedule. Learn more about our events, members, and sponsors on our website." />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
@@ -32,7 +33,7 @@
     <meta name="twitter:title"
         content="Misfits basketball club is a youth sports basketball club located in Regina Saskaskatchewan">
     <meta name="twitter:description"
-        content="Misfits basketball club is a youth sports basketball club located in Regina Saskaskatchewan">
+        content="Misfits Basketball - A Community of Hoopers in Regina, SK Join Misfits Basketball, a friendly and diverse group of basketball enthusiasts in Regina, Saskatchewan. Whether you are a beginner or a pro, you will find a game that suits your skill level and schedule. Learn more about our events, members, and sponsors on our website.">
     <meta name="twitter:image" content="assets/images/alalia-preview.png">
 
     <!-- Google Fonts -->
@@ -74,7 +75,7 @@
                                 <span
                                     class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
                                 <a class="navbar-brand logo" href="index.html">
-                                    <img src="assets/images/Misfit M-trans.png" class="logo-img" alt="logo"></a>
+                                    <img src="assets/images/Misfit M-trans.png" class="logo-img" alt="Misfits Logo"></a>
                                 <div class="w-100 text-right">
                                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                                         data-target="#myNavbar">
@@ -108,7 +109,7 @@
             style="background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .6)), url('court-back.jpg'); background-size:cover;">
             <div class="center container">
                 <img class="center" vspace="0px" src="assets/images/Misfits Dark-trans.png"
-                    style="max-width:1000px; max-height:1000px; width: 25vw">
+                    style="max-width:1000px; max-height:1000px; width: 25vw" alt="Misfits Basketball Club Logo">
                 <h3 class="xxl-font-size font-weight__500 text-misfit-blue" text-align="center">BASKETBALL CLUB</h3>
                 <h3 class="base-font-size font-weight__500 text-misfit-blue" text-align="center" margin-bottom="0">
                     Regina, SK</h3>
@@ -175,8 +176,8 @@
 
                         <div class="col-6 mx-auto">
                             <div class="section-title text-left">
-                                <img class="justify-left" vspace="0px" src="assets/images/Canada Basketball.png"
-                                    style="max-width:200px; max-height:1000px">
+                                <a href = "https://www.basketball.ca/en/development/verified?gclid=CjwKCAiA1-6sBhAoEiwArqlGPoolJe7mBEcxEnq3IBdyhSJcjZQPpkfWMydpio6TSUOobGR52a1uoBoC10MQAvD_BwE" target="_blank"> </a><img class="justify-left" vspace="0px" src="assets/images/Canada Basketball.png"
+                                    style="max-width:200px; max-height:1000px" alt="Canada Basketball Verified Logo"></a>
                             </div>
                         </div>
                         <div class="col-0 mx-auto">
@@ -203,7 +204,7 @@
                                     <h2 class="text-left xxl-font-size font-weight__500">
                                         Our Supporters
                                     </h2>
-                            
+
                                     <!-- Empty Space -->
 
                                     <!--/ End Empty Space -->
@@ -217,7 +218,7 @@
                                     <H2>Generous Program Support Provided By:</H2>
                                     <div class="text-center text-lg-center">
                                         <img src="assets/images/sponsors.jpg" class="w-50 shadow-1-strong rounded mb-4"
-                                            alt="Boat on Calm Water">
+                                            alt="Our Sponsors">
                                     </div>
                                 </div>
                             </div>
@@ -300,12 +301,15 @@
                                         Burgess and Leah Levy, along with local teacher and BSI VP of Coaches
                                         Development, Jeremy Sundeen. They have a lot of experience and expertise to
                                         share. Our Misfits basketball club currently supports player development between
-                                        grades four to nine. We are the biggest female youth basketball club in Saskatchewan!
-                                    </p>
+                                        grades four to nine. We are the biggest female youth basketball club in
+                                        Saskatchewan!</p>
                                     <p class="base-font-size text-facebook-dark2 text-justify">
                                         We are based on the idea of creating opportunities through basketball. We offer
-                                        basketball training and coaching for girls from grade four to nine. We want to
-                                        help girls develop their skills and confidence on and off the court.
+                                        basketball training and coaching for girls from grade four to nine. Our NCCP
+                                        Certified Coaches develop athletes in alignment with the Sports Canada LTAD
+                                        Model, a research based approach to optimal athlete development at all levels of
+                                        sport. We want to
+                                        help girls develop their skills and confidence on and off the court.</p>
                                     <p class="base-font-size text-facebook-dark2 text-justify">
                                         We are committed to creating a basketball environment that is accessible,
                                         inclusive, and welcoming for everyone. We respect and celebrate diversity and
@@ -314,8 +318,7 @@
                                     <p class="base-font-size text-facebook-dark2 text-justify">
                                         Our goal is to empower and support female youths as they grow and
                                         develop their skills and support everyone
-                                        who wants to play basketball, no matter what their level or experience is.
-                                    </p>
+                                        who wants to play basketball, no matter what their level or experience is.</p>
                                 </div>
                             </div>
 
@@ -404,8 +407,8 @@
                             </div>
                             <div height=200px class="col-12 col-lg-3">
                                 <div class="text-center">
-                                    <img src="assets/images/Canada Basketball.png" class="img-fluid" alt="product image"
-                                        width="400px" height="auto">
+                                    <a href="https://www.basketball.ca/en/development/verified?gclid=CjwKCAiA1-6sBhAoEiwArqlGPoolJe7mBEcxEnq3IBdyhSJcjZQPpkfWMydpio6TSUOobGR52a1uoBoC10MQAvD_BwE" target="_blank"><img src="assets/images/Canada Basketball.png" class="img-fluid"
+                                        alt="Canada Basektball Verified Logo" width="400px" height="auto"></a>
 
                                 </div>
                             </div>
@@ -444,8 +447,8 @@
                             </div>
                             <div class="col-12 col-lg-4">
                                 <div class="text-center">
-                                    <img src="assets/images/abuse.jpg" class="box-shadow p-50 " alt="product image"
-                                        object-fit="none">
+                                    <a href="https://abuse-free-sport.ca/" target="_blank"> <img src="assets/images/abuse.jpg" class="box-shadow p-50 "
+                                        alt="Abuse Free Sport Logo" object-fit="none"></a>
                                 </div>
                             </div>
                         </div>
@@ -487,12 +490,14 @@
                             </div>
                             <div height=200px class="col-12 col-lg-3">
                                 <div class="text-center">
-                                    <img src="assets/images/ethics.png" class="img-fluid" alt="product image"
+                                    <a href="https://coach.ca/sport-safety/responsible-coaching-movement" target="_blank">
+                                    <img src="assets/images/ethics.png" class="img-fluid" alt="Ethics Logo"
                                         width="130px" height="auto">
-                                    <img src="assets/images/screening.png" class="img-fluid" alt="product image"
-                                        width="130px" height="auto" vspace="10px">
-                                    <img src="assets/images/rule2.png" class="img-fluid" alt="product image"
+                                    <img src="assets/images/screening.png" class="img-fluid"
+                                        alt="Background Screening Logo" width="130px" height="auto" vspace="10px">
+                                    <img src="assets/images/rule2.png" class="img-fluid" alt="Rule of Two Logo"
                                         width="130px" height="auto">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -526,8 +531,8 @@
                             </div>
                             <div class="col-12 col-lg-4">
                                 <div class="text-center">
-                                    <img src="assets/images/logo-jumpstart-min-1.png" class="img-fluid"
-                                        alt="product image" width="300px" height="auto">
+                                    <a href = "https://jumpstart.canadiantire.ca/" target="_blank" ><img src="assets/images/logo-jumpstart-min-1.png" class="img-fluid"
+                                        alt="Canadian Tire Jumpstart Program Logo" width="300px" height="auto"></a>
                                 </div>
                             </div>
                         </div>
