--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <!--/ End Features -->
 
 
-        <!-- Gallery -->
+        <!-- Gallery 
         <section class="feature section bg-dark-gray">
             <div class="container">
                 <div class="row no-gutters">
@@ -359,10 +359,9 @@
                                 class="w-100 shadow-1-strong rounded mb-4" alt="Yosemite National Park" />
                         </div>
                     </div>
-                    <!-- Gallery -->
                 </div>
         </section>
-
+         Gallery -->
 
         <!-- <section class="parallax2"></section> -->
 
