--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                         We are the Regina Misfits, a youth basketball club that started in
                                         2019. We were founded by former University of Regina Women Cougar’s players Bree
                                         Burgess and Leah Levy, along with local teacher and BSI VP of Coaches
-                                        Development, Jeremy Sundeen. They have a lot of experience and expertise to
+                                        Development, Jeremy Sundeen and Jared Woloshyn from Regina. They have a lot of experience and expertise to
                                         share. Our Misfits basketball club currently supports player development between
                                         grades four to nine. We are the biggest female youth basketball club in
                                         Saskatchewan!</p>
