--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                         <div class="col-6 mx-auto">
                             <div class="section-title text-left">
-                                <a href = "https://www.basketball.ca/en/development/verified?gclid=CjwKCAiA1-6sBhAoEiwArqlGPoolJe7mBEcxEnq3IBdyhSJcjZQPpkfWMydpio6TSUOobGR52a1uoBoC10MQAvD_BwE" target="_blank"> </a><img class="justify-left" vspace="0px" src="assets/images/Canada Basketball.png"
+                                <a href = "https://www.basketball.ca/en/development/verified?gclid=CjwKCAiA1-6sBhAoEiwArqlGPoolJe7mBEcxEnq3IBdyhSJcjZQPpkfWMydpio6TSUOobGR52a1uoBoC10MQAvD_BwE" target="_blank"> </a><img class="justify-left" vspace="0px" src="assets/images/Canada BasketballXXX.png"
                                     style="max-width:200px; max-height:1000px" alt="Canada Basketball Verified Logo"></a>
                             </div>
                         </div>
