--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
                         </div>
 
                         <div class="col-6 mx-auto">
-                            <div class="section-title text-left">
+                            <div class="section-title text-left"> <!--
                                 <a href = "https://www.basketball.ca/en/development/verified?gclid=CjwKCAiA1-6sBhAoEiwArqlGPoolJe7mBEcxEnq3IBdyhSJcjZQPpkfWMydpio6TSUOobGR52a1uoBoC10MQAvD_BwE" target="_blank"> </a><img class="justify-left" vspace="0px" src="assets/images/Canada BasketballXXX.png"
-                                    style="max-width:200px; max-height:1000px" alt="Canada Basketball Verified Logo"></a>
+                                    style="max-width:200px; max-height:1000px" alt="Canada Basketball Verified Logo"></a> -->
                             </div>
                         </div>
                         <div class="col-0 mx-auto">
