--- a/policies.html
+++ b/policies.html
@@ -137,20 +137,20 @@
 
 
                                     <h2 class="md-font-size font-weight__500 text-black">
-                                        <a href="assets/images/Code of Conduct Template.docx.pdf">Athlete protection
+                                        <a href="assets/images/Misfits_Basketball_Background_Screening_Policy.docx.pdf">Athlete protection
                                             guidelines</a>
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="md-space"></div>
                                     <!--/ End Empty Space -->
                                     <h2 class="md-font-size font-weight__500 text-black">
-                                        <a href="assets/images/Code of Conduct Template.docx.pdf">Code of Conduct</a>
+                                        <a href="assets/images/Misfits_Basketball_Code_of_Conduct.docx.pdf">Code of Conduct</a>
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="md-space"></div>
                                     <!--/ End Empty Space -->
                                     <h2 class="md-font-size font-weight__500 text-black">
-                                        <a href="assets/images/Code of Conduct Template.docx.pdf">Background screening
+                                        <a href="assets/images/Misfits_Basketball_Background_Screening_Policy.docx.pdf">Background screening
                                             policy</a>
                                     </h2>
                                     <!-- Empty Space -->
@@ -163,7 +163,7 @@
                                     <div class="md-space"></div>
                                     <!--/ End Empty Space -->
                                     <h2 class="md-font-size font-weight__500 text-black">
-                                        <a href="assets/images/Code of Conduct Template.docx.pdf">By-laws</a>
+                                        <a href="assets/images/Misfits_Basketball_By-Laws.docx.pdf">By-laws</a>
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="md-space"></div>
@@ -174,7 +174,10 @@
                                     <!-- Empty Space -->
                                     <div class="md-space"></div>
                                     <!--/ End Empty Space -->
-
+                                    <h2 class="md-font-size font-weight__500 text-black">
+                                        <a href="assets/images/Misfits_Basketball_Photo_and_Video_Consent_Form.docx.pdf">Photo and Video Consent Form</a>
+                                    </h2>
+                                    <!-- Empty Space -->
 
                                 </div>
                             </div>
