--- a/policies.html
+++ b/policies.html
@@ -137,8 +137,7 @@
 
 
                                     <h2 class="md-font-size font-weight__500 text-black">
-                                        <a href="assets/images/Misfits_Basketball_Athlete_Protection_Guidelines.docx.pdf">Athlete protection
-                                            guidelines</a>
+                                        <a href="assets/images/Misfits_Basketball_Athlete_Protection_Guidelines.docx.pdf">Athlete Protection Guidelines</a>
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="md-space"></div>
@@ -150,7 +149,7 @@
                                     <div class="md-space"></div>
                                     <!--/ End Empty Space -->
                                     <h2 class="md-font-size font-weight__500 text-black">
-                                        <a href="assets/images/Misfits_Basketball_Background_Screening_Policy.docx.pdf">Background screening
+                                        <a href="assets/images/Misfits_Basketball_Background_Screening_Policy.docx.pdf">Background Screening
                                             policy</a>
                                     </h2>
                                     
