--- a/policies.html
+++ b/policies.html
@@ -159,6 +159,12 @@
                                     <h2 class="md-font-size font-weight__500 text-black">
                                         <a href="assets/images/Misfits_Basketball_By-Laws.docx.pdf">By-laws</a>
                                     </h2>
+                                     <!-- Empty Space -->
+                                    <div class="md-space"></div>
+                                    <!--/ End Empty Space -->
+                                    <h2 class="md-font-size font-weight__500 text-black">
+                                        <a href="assets/images/Misfits_Basketball_Concussion_Policy.docx.pdf">Concusion Policy</a>
+                                    </h2>
                                     <!-- Empty Space -->
                                     <div class="md-space"></div>
                                     <!--/ End Empty Space -->
