--- a/policies.html
+++ b/policies.html
@@ -123,13 +123,7 @@
                                         Policies
                                     </h2>
                                     <p class="base-plus-font-size text-justify text-facebook-dark2">
-                                        Misfits Basketball Club strives to be the best Lorem ipsum dolor sit amet
-                                        consectetur adipisicing elit. Nihil quis laudantium magnam nesciunt facilis in,
-                                        aut tempore iure quasi repellat delectus voluptate totam consectetur molestiae
-                                        sed expedita ad quam a. Lorem ipsum dolor sit, amet consectetur adipisicing
-                                        elit. Nihil omnis vel voluptatibus sit mollitia necessitatibus similique labore
-                                        consectetur laboriosam ratione! Cupiditate aliquam accusamus minus eos quam
-                                        quibusdam numquam tenetur. Placeat?
+                                        Our passion for the game drives us to be the best—both on and off the court. We’re committed to fostering a safe, respectful, and inclusive environment for our players, coaches, and staff. Whether it’s perfecting that jump shot or supporting each other during tough times, we stand united.
                                     </p>
                                     <!-- Empty Space -->
                                     <div class="md-space"></div>
