--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Standard favicon -->
+    <!-- Standard favicon Test -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
